fix(build): ternary was coercing empty string to false

--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -82,9 +82,9 @@ jobs:
           file: api/deploy/build.Dockerfile
           # Only use the default base image (which would cause a full rebuild) if explicitly requested.
           build-args: >
-            ${{ github.event.inputs.rebuild_api_base
-            && ''
-            || format('BASE_IMAGE={0}', steps.construct_tags.outputs.base_image_tag) }}
+            ${{ !github.event.inputs.rebuild_api_base
+            && format('BASE_IMAGE={0}', steps.construct_tags.outputs.base_image_tag)
+            || '' }}
           push: true
           tags: ${{ steps.construct_tags.outputs.base_image_tag }}
           cache-from: type=gha
