--- a/.github/workflows/api-build-and-deploy.yml
+++ b/.github/workflows/api-build-and-deploy.yml
@@ -3,14 +3,13 @@
 name: API - Build and Deploy
 
 env:
-  RESOURCE_GROUP: "hcommenter"
+  RESOURCE_GROUP: "hcommenter-test-rg"
   LOCATION: "australiaeast"
-  API_NAME: "hcommenter-api"
+  APP_NAME: "hcommenter"
   FRONTEND_NAME: "hcommenter-ui"
   GITHUB_USERNAME: "CharlesEkkel"
   GITHUB_ORG: cekkel
   REGISTRY: ghcr.io
-  IDENTITY: hcommenter-identity
   TARGET_PORT: 8080
 
 # yamllint disable-line rule:truthy
@@ -60,8 +59,8 @@ jobs:
         id: construct_tags
         shell: bash
         run: |
-          echo "base_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:base" >> $GITHUB_OUTPUT;
-          echo "full_image_tag=${REGISTRY}/${GITHUB_ORG}/${API_NAME}:${BRANCH_NAME}" >> $GITHUB_OUTPUT;
+          echo "base_image_tag=${REGISTRY}/${GITHUB_ORG}/${APP_NAME}-api:base" >> $GITHUB_OUTPUT;
+          echo "full_image_tag=${REGISTRY}/${GITHUB_ORG}/${APP_NAME}-api:${BRANCH_NAME}" >> $GITHUB_OUTPUT;
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -129,13 +128,13 @@ jobs:
           registryPassword: ${{ secrets.GITHUB_TOKEN }}
           imageToDeploy: ${{ needs.build.outputs.image_tag }}
           resourceGroup: ${{ env.RESOURCE_GROUP }}
-          containerAppName: ${{ env.API_NAME }}
+          containerAppName: ${{ env.APP_NAME }}-test-api-app
           targetPort: ${{ env.TARGET_PORT }}
           location: ${{ env.LOCATION }}
           environmentVariables: >
             APP__NAME=hCommenter-Api
             APP__ENVIRONMENT=Test
-            APP__PORT=80
+            APP__PORT=8080
             APP__BACKEND=SQLite
             LOGGING__SEVERITY=Debug
             LOGGING__VERBOSITY=V0
