--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,24 +2,15 @@ server {
     listen 80;
     server_name localhost;
 
-    # Enable CORS preflight requests
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
-
-    # Handle OPTIONS requests - unlikely to happen with localhost (as spa & api share a hostname), but just in case.
-    if ($request_method = 'OPTIONS') {
-        return 204;
+    location /api/ {
+        # Proxy requests to the API
+        proxy_pass http://backend:8080/; # This is the name of the service in the docker-compose file
+        proxy_set_header Host $host;
     }
 
-    # Proxy all other requests to the API
+    # Proxy all other requests to the frontend
     location / {
-        proxy_pass http://backend:80; # This is the name of the service in the docker-compose file
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_pass http://frontend-dev:5173/; # This is the name of the service in the docker-compose file
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 }
