--- a/api/justfile
+++ b/api/justfile
@@ -8,6 +8,10 @@ cabal-file := "hCommenter-Api.cabal"
 hpack-file := "package.yaml"
 hpack := "hpack"
 
+lint:
+    hlint --quiet .
+    fourmolu --mode check --quiet .
+
 # Run hpack to generate .cabal file
 run-hpack:
     {{hpack}} -f
