--- a/spa/package.json
+++ b/spa/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "tsc --noEmit && eslint . && prettier --check .",
     "preview": "vite preview",
     "generate-api": "openapi-ts"
   },
