--- a/api/hCommenter-Api.cabal
+++ b/api/hCommenter-Api.cabal
@@ -25,8 +25,6 @@ source-repository head
 library
   exposed-modules:
       Auth
-      Database.Authors.Effect
-      Database.Authors.Interface
       Database.Comments.Effect
       Database.Comments.Interface
       Database.Conversations.Effect
@@ -35,6 +33,8 @@ library
       Database.Mockserver
       Database.Schema
       Database.SqlPool
+      Database.Users.Effect
+      Database.Users.Interface
       EffectInjection
       EntryPoints
       Frontend.Server
@@ -53,6 +53,7 @@ library
       Middleware.Requests
       Middleware.ServantErrorFormatters
       RestAPI.EffectInjection
+      RestAPI.Endpoints.Auth
       RestAPI.Endpoints.Comment
       RestAPI.Endpoints.Health
       RestAPI.Endpoints.Swagger
