feat: integrate auth with swagger disabled for now

--- a/api/hCommenter-Api.cabal
+++ b/api/hCommenter-Api.cabal
@@ -47,6 +47,7 @@ library
       Mapping.Comments
       Mapping.ExternalTypes
       Mapping.Typeclass
+      Mapping.Users
       Middleware.Combined
       Middleware.Exceptions
       Middleware.Headers
